--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
   
- 
+ meta property="og:title" content="🔰Swapnil rathod🔰">
+
+    <meta property="og:image" content="hacker1.png">
+  
     <title>profile Card | Swapnilrathod</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
