--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
  meta property="og:title" content="🔰Swapnil rathod🔰">
 
-    <meta property="og:image" content="hacker1.png">
+       <meta property="og:image" content="https://cdn5.telesco.pe/file/EjPfGtLN1rowyTgT5qgOWK9gjq0owXdaJ-ou0FJSAewWTKx2KZw3sHS0HKzg8bO5Ovs_ky2PDge21K8nWxACg2-wzCh8yb0zARl2jcN_4H96y1Fuj8E0EpxV0JsQDxkMNoT39YRUjQco0OGgCYiVjLbM6gPCh4tghBjTPlTvrBAbLm3iDXnKz1DovuOPAJvVju1rQOQTyNMkQX2m9skIFALiNZ7C_nYxN2S8Ihmp4v_YzAmL_I6UcmSuFbGm8R9gJKSPAmTi4JTA8PyBSSUl3HmjNnB1sErfx7Ja5HueYcUSZeKpOx2fxK9OZTHG_w59woMERhEM6y0rj7eGq6hG1g.jpg">
   
     <title>profile Card | Swapnilrathod</title>
     <link rel="stylesheet" href="style.css">
