--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a href="https://www.instagram.com/rathod.sopnil/" class="insta"><i class="fab fa-instagram"></i></a>
       <a href="https://t.me/joinchat/fJZJrdwy46k4OWM1" class="te"><i class="fab fa-telegram"></i></a>
       <a href="https://youtube.com/channel/UCT1zDEnrv6WmS0TtqT3E6Ag" class="yt"><i class="fab fa-youtube"></i></a>
-       <a href="https://github.com/swapnilrathod07" class="git"><i class="fab fa-github"></i></a>
+       <a href="https://chat.whatsapp.com/DSIn4c0EWi9BoKPwiNvvdd" class="git"><i class="fab fa-whatsapp"></i></a>
     </div>
     
     <div class="buttons">
