--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <a href="https://t.me/joinchat/fJZJrdwy46k4OWM1" class="te"><i class="fab fa-telegram"></i></a>
       <a href="https://youtube.com/channel/UCT1zDEnrv6WmS0TtqT3E6Ag" class="yt"><i class="fab fa-youtube"></i></a>
        <a href="https://chat.whatsapp.com/DSIn4c0EWi9BoKPwiNvvdd" class="wa"><i class="fab fa-whatsapp"></i></a>
-    </div>
+    </div>en
     
     <div class="buttons">
       
-      <button>Message</button>
+      <button<a href="https://chat.whatsapp.com/DSIn4c0EWi9BoKPwiNvvdd></a>>Message</button>
       <button>Subscribe</button>
     </div>
  
