--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <div class="buttons">
       
-      <button<a href="https://chat.whatsapp.com/DSIn4c0EWi9BoKPwiNvvdd></a>>Message</button>
+      <button>Message</button>
       <button>Subscribe</button>
     </div>
  
