--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="https://t.me/joinchat/fJZJrdwy46k4OWM1" class="te"><i class="fab fa-telegram"></i></a>
       <a href="https://youtube.com/channel/UCT1zDEnrv6WmS0TtqT3E6Ag" class="yt"><i class="fab fa-youtube"></i></a>
        <a href="https://chat.whatsapp.com/DSIn4c0EWi9BoKPwiNvvdd" class="wa"><i class="fab fa-whatsapp"></i></a>
-    </div>en
+    </div>
     
     <div class="buttons">
       
