--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="about"></div>
     <div class="social-icons">
       <a href="https://www.facebook.com/sopnil.rathod.503" class="fb"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://www.instagram.com/rathod.sopnil/" class="insta"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/swapnil_rathodsr/" class="insta"><i class="fab fa-instagram"></i></a>
       <a href="https://t.me/joinchat/fJZJrdwy46k4OWM1" class="te"><i class="fab fa-telegram"></i></a>
       <a href="https://youtube.com/channel/UCT1zDEnrv6WmS0TtqT3E6Ag" class="yt"><i class="fab fa-youtube"></i></a>
        <a href="https://wa.me/919834087147?text=Hello%20sir%20%F0%9F%92%8C" class="wa"><i class="fab fa-whatsapp"></i></a>
