--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>profile Card | Swapnilrathod</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="icon" href="profile.png"
+<link rel="icon" type="image/png" href="profile.png" />
 
 </head>
 <body>
