--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="wrapper">
     <div class="img-area">
       <div class="inner-area">
-        <img src="Profile.png" alt="">
+        <img src="iam.png" alt="">
       </div>
     </div>
     <div class="icon arrow"><i class="fas fa-arrow-left"></i></div>
