--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     
     <div class="buttons">
       
-      <button>Message</button>
+      <button class="GFG" 
+
+    onclick="window.location.href = 'https://wa.me/919834087147?text=Hello%20sir%20%F0%9F%92%8C';">Message</button>
       <button>Subscribe</button>
     </div>
  
