--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     <div class="buttons">
       
       <button class="GFG" 
-
     onclick="window.location.href = 'https://wa.me/919834087147?text=Hello%20sir%20%F0%9F%92%8C';">Message</button>
-      <button>Subscribe</button>
+      
+      <button class="GFG" 
+              onclick="window.location.href = 'https://youtube.com/channel/UCT1zDEnrv6WmS0TtqT3E6Ag';">Subscribe</button>
     </div>
  
       </div>
