--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <title>profile Card | Swapnilrathod</title>
+    <title>Swapnilrathod</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 <link rel="icon" type="image/png" href="profile.png" />
@@ -34,7 +34,7 @@
       <a href="https://www.instagram.com/swapnil_rathodsr/" class="insta"><i class="fab fa-instagram"></i></a>
       <a href="https://telegram.me/swapnil_sr?text=Hello%20sir%20%F0%9F%92%8C" class="te"><i class="fab fa-telegram"></i></a>
       <a href="https://youtube.com/channel/UCT1zDEnrv6WmS0TtqT3E6Ag" class="yt"><i class="fab fa-youtube"></i></a>
-       <a href="https://wa.me/919834087147?text=Hello%20sir%20%F0%9F%92%8C" class="wa"><i class="fab fa-whatsapp"></i></a>
+       <a href="https://chat.whatsapp.com/DSIn4c0EWi9BoKPwiNvvdd" class="wa"><i class="fab fa-whatsapp"></i></a>
     </div>
     
     <div class="buttons">
