--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="icon arrow"><i class="fas fa-arrow-left"></i></div>
     <div class="icon dots"><i class="fas fa-ellipsis-v"></i></div>
     <div class="name">Swapnil rathod</div>
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7938937&style=0007&nbdigits=5&type=page&initCount=0"    border="0" />   
     <div class="about"></div>
     <div class="social-icons">
       <a href="https://www.facebook.com/sopnil.rathod.503" class="fb"><i class="fab fa-facebook-f"></i></a>
