--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="social-icons">
       <a href="https://www.facebook.com/sopnil.rathod.503" class="fb"><i class="fab fa-facebook-f"></i></a>
       <a href="https://www.instagram.com/swapnil_rathodsr/" class="insta"><i class="fab fa-instagram"></i></a>
-      <a href="https://telegram.me/swapnil_sr?text=Hello%20sir%20%F0%9F%92%8C" class="te"><i class="fab fa-telegram"></i></a>
+      <a href="https://telegram.me/hacker_sr" class="te"><i class="fab fa-telegram"></i></a>
       <a href="https://youtube.com/channel/UCT1zDEnrv6WmS0TtqT3E6Ag" class="yt"><i class="fab fa-youtube"></i></a>
        <a href="https://chat.whatsapp.com/DSIn4c0EWi9BoKPwiNvvdd" class="wa"><i class="fab fa-whatsapp"></i></a>
     </div>
